syntax = "proto3";

package domain_name_service;

option go_package = "github.com/fidesy/sdk/services/domain-name-service;domain_name_service";

service DomainNameService {
  rpc GetAddress(GetAddressRequest) returns(GetAddressResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns(UpdateAddressResponse);
}

message GetAddressRequest {
  string service_name = 1;
}

message GetAddressResponse {
  string address = 1;
}

message UpdateAddressRequest {
  string service_name = 1;
  string address = 2;
}

message UpdateAddressResponse {}